--- a/app/package.json
+++ b/app/package.json
@@ -49,6 +49,7 @@
     "express": "^4.13.3",
     "fcm-push": "^1.1.2",
     "isomorphic-fetch": "^2.2.1",
+    "moment": "^2.17.1",
     "morgan": "^1.7.0",
     "node-fetch": "^1.6.0",
     "nodemailer": "^2.7.0",
