--- a/app/package.json
+++ b/app/package.json
@@ -49,6 +49,7 @@
     "express": "^4.13.3",
     "fcm-push": "^1.1.2",
     "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "moment-timezone": "^0.5.11",
     "morgan": "^1.7.0",
