--- a/app/package.json
+++ b/app/package.json
@@ -44,10 +44,12 @@
     }
   },
   "dependencies": {
+    "aws-sdk": "^2.22.0",
     "babel-polyfill": "^6.3.14",
     "body-parser": "^1.15.2",
     "express": "^4.13.3",
     "fcm-push": "^1.1.2",
+    "fs": "0.0.1-security",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
