--- a/app/package.json
+++ b/app/package.json
@@ -58,6 +58,7 @@
     "morgan": "^1.7.0",
     "multer": "^1.3.0",
     "node-fetch": "^1.6.0",
+    "node-schedule": "^1.2.1",
     "nodemailer": "^2.7.0",
     "nodemon": "^1.10.0",
     "pretty-error": "^1.2.0",
