--- a/app/package.json
+++ b/app/package.json
@@ -44,6 +44,7 @@
     }
   },
   "dependencies": {
+    "async": "^2.1.5",
     "aws-sdk": "^2.22.0",
     "babel-polyfill": "^6.3.14",
     "body-parser": "^1.15.2",
